--- a/package.json
+++ b/package.json
@@ -9,39 +9,44 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "start": "ember server --proxy http://localhost:8000",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "test": "ember test"
   },
   "engines": {
-    "node": "10.* || >= 12.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "^1.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@ember/jquery": "^1.1.0",
-    "@ember/optional-features": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.5.3",
-    "ember-basic-dropdown": "^2.0.11",
+    "ember-basic-dropdown": "^3.0.5",
     "ember-can": "^2.1.0",
     "ember-changeset": "^2.2.4",
     "ember-changeset-validations": "^2.2.1",
-    "ember-cli": "~3.12.0",
+    "ember-cli": "~3.16.2",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.13.2",
+    "ember-cli-babel": "^7.17.2",
     "ember-cli-chart": "^3.5.0",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.2.0",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-htmlbars": "^4.2.2",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-mirage": "^1.1.6",
     "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-nouislider": "^1.1.0",
@@ -54,7 +59,7 @@
     "ember-component-css": "^0.6.9",
     "ember-composable-helpers": "^3.0.2",
     "ember-concurrency": "^1.1.3",
-    "ember-data": "~3.12.0",
+    "ember-data": "~3.16.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^7.0.0",
     "ember-font-awesome": "^3.1.1",
@@ -65,9 +70,9 @@
     "ember-notify": "^6.0.0",
     "ember-pad": "^1.2.3",
     "ember-parachute": "^1.0.2",
-    "ember-power-calendar": "^0.13.3",
+    "ember-power-calendar": "^0.14.1",
     "ember-power-calendar-moment": "^0.1.7",
-    "ember-power-select": "^2.3.4",
+    "ember-power-select": "^3.0.4",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
     "ember-responsive": "^3.0.5",
@@ -75,7 +80,7 @@
     "ember-scrollable": "^1.0.0",
     "ember-simple-auth": "^2.1.1",
     "ember-site-tour": "^2.2.0",
-    "ember-source": "~3.12.0",
+    "ember-source": "~3.16.0",
     "ember-test-selectors": "^3.0.0",
     "ember-tether": "^1.0.0",
     "ember-truth-helpers": "^2.1.0",
@@ -83,15 +88,15 @@
     "ember-wormhole": "^0.5.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-ember": "^6.2.0",
+    "eslint-plugin-ember": "^7.7.2",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "faker": "^4.1.0",
     "loader.js": "^4.7.0",
     "pagination-pager": "^3.2.0",
     "prettier": "1.19.1",
-    "qunit-dom": "^0.8.4",
+    "qunit-dom": "^1.0.0",
     "sass": "^1.24.2",
     "typeface-source-sans-pro": "^0.0.75"
   }
